# libsodium-cmake

./: CMakeLists.txt
